--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   firebase_core: ^3.15.2
   firebase_auth: ^5.3.4
   cloud_firestore: ^5.4.0
+  collection: ^1.19.0
   
 
   # Charts
