--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,39 +15,38 @@ dependencies:
   provider: ^6.0.5
 
   # Firebase
-  firebase_core: ^4.0.0
-  firebase_auth: ^6.0.1
-  cloud_firestore: ^6.0.0
+  firebase_core: ^3.15.2
+  firebase_auth: ^5.3.4
+  cloud_firestore: ^5.4.0
   collection: ^1.19.0
+  
 
   # Charts
-  fl_chart: ^1.0.0
+  fl_chart: ^0.69.0
 
   # Notifications
-  flutter_local_notifications: ^19.4.0
-
-
-  # Hive for local storages
+  flutter_local_notifications: ^14.0.0
+  timezone: ^0.9.0 
+  
+  # Hive for local storage
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.0.12
 
   # iOS styling
   cupertino_icons: ^1.0.8
-
-  # UUID for unique IDs
-  uuid: ^4.5.1
-  timezone: ^0.10.1 
-
+  logging: ^1.1.1
+  
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^6.0.0
+  flutter_lints: ^3.0.0
 
   # Hive code generator
   hive_generator: ^2.0.0
   build_runner: ^2.4.6
-  
+ 
   
 
 flutter:
